Fixed h2 styling in about box

--- a/style.css
+++ b/style.css
@@ -56,6 +56,10 @@ body {
     color: white;
 }
 
+.about-box h2 {
+    color: white;
+}
+
 .projects-box {
     font-family: Itim;
     color: white;
