Added mountain background

--- a/style.css
+++ b/style.css
@@ -6,9 +6,8 @@
 
 body {
     font-family: 'Itim';
-    /* background: url(./Assets/photo-1570039486851-9caa462a2cd3.jpg);
-    background-size: cover; */
-    background: #1f232e !important;
+    background: url(./Assets/photo-1477346611705-65d1883cee1e.jpg);
+    background-size: cover;
 }
 
 /* .nav-link li {
